--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,10 @@
 version: '3'
+
 services:
-  sample-python-celery:
+  web:
     build: .
     ports:
-      - 3000:3000
-    working_dir: /usr/src/app
+      - 5000:5000
     volumes:
       - .:/usr/src/app
-    environment:
-      MONGO_URL: $SCALINGO_MONGO_URL
-      #REDIS_URL: redis://redis:6379/
-    command: "python ./app.py"
-  worker:
-    build: .
-    working_dir: /usr/src/app
-    volumes:
-      - .:/usr/src/app
-    environment:
-      MONGO_URL: $SCALINGO_MONGO_URL
-      C_FORCE_ROOT: "true"
-    command: "celery worker --app=scal_task.app"
-  mongo:
-    image: mongo
-    ports:
-      - 6379:6379
+    stop_signal: SIGKILL
