--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,25 @@
 version: '3'
-
 services:
-  web:
+  sample-python-celery:
     build: .
     ports:
-      - 5000:5000
+      - 3000:3000
+    working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
-    stop_signal: SIGKILL
+    environment:
+      REDIS_URL: redis://redis:6379/
+    command: "python ./app.py"
+  worker:
+    build: .
+    working_dir: /usr/src/app
+    volumes:
+      - .:/usr/src/app
+    environment:
+      REDIS_URL: redis://redis:6379/
+      C_FORCE_ROOT: "true"
+    command: "celery worker --app=scal_task.app"
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
