--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+amqp==2.4.2
+anyjson==0.3.3
+billiard==3.6.0.0
+celery==4.3.0
+click==6.6
 Flask==1.0.2
-pymongo==3.11
+itsdangerous==0.24
+Jinja2==2.11.3
+kombu==4.5.0
+MarkupSafe==0.23
+pytz==2016.4
+redis==3.2.0
+vine==1.3.0
+Werkzeug==0.15.3
