--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 amqp==2.4.2
-anyjson==0.3.3
+# anyjson==0.3.3
 billiard==3.6.0.0
 celery==4.3.0
 click==6.6
@@ -13,3 +13,12 @@ python-dotenv==0.20.0
 redis==3.2.0
 vine==1.3.0
 Werkzeug==0.15.3
+TTS
+cffi
+librosa==0.8.0
+pyworld
+soundfile
+librosa==0.8.0
+coqui-trainer
+coqpit
+webrtcvad
