--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,12 @@ python-dotenv==0.20.0
 redis==3.2.0
 vine==1.3.0
 Werkzeug==0.15.3
-TTS
-cffi
-librosa==0.8.0
-pyworld
-soundfile
-librosa==0.8.0
-coqui-trainer
-coqpit
-webrtcvad
+# TTS
+# cffi
+# librosa==0.8.0
+# pyworld
+# soundfile
+# librosa==0.8.0
+# coqui-trainer
+# coqpit
+# webrtcvad
